removed the SVG tag as it wasn't being used.

--- a/client/game-turn/game_index.html
+++ b/client/game-turn/game_index.html
@@ -168,12 +168,8 @@
 <body onload="pageload()">
     <video id="video" width="640" height="240" autoplay></video>
     <button id="snap">Snap Photos</button>
-    <canvas id="canvas" width="640" height="240"></canvas>
-      <div class="container">
-    <svg id="svg2" xmlns="http://www.w3.org/2000/svg"
-      xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 63 63">
-    </svg>
-  </div>
+    <canvas id="canvas" width="640" height="640"></canvas>
+    <div class="container"></div>
 
   <script src="js/pixel.js"></script>
   <script src="js/canvas.js"></script>
