--- a/client/game-turn/game_index.html
+++ b/client/game-turn/game_index.html
@@ -1,12 +1,44 @@
 <html>
 <head>
-     <title>take picture</title>
+    <title>take picture</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            background-color: #CCC;
+        }
+
+        #video,
+        #cameraCanvas,
+        #lineArt {
+            position: absolute;
+        }
+
+        #imageContainer {
+            position: relative;
+            width: 640px;
+            height: 480px;
+            margin: 20px auto;
+        }
+
+        button {
+            display: block;
+            margin: 20px auto;
+        }
+    </style>
 </head>
 <body>
-    <video id="video" width="640" height="240" autoplay></video>
-    <button id="snap">Snap Photos</button>
-    <canvas id="canvas" width="640" height="640"></canvas>
-    <div class="container"></div>
+    <div id="imageContainer">
+        <video id="video" width="640px" height="480px" autoplay></video>
+        <canvas id="cameraCanvas" width="640px" height="480px"></canvas>
+        <div id="lineArt">
+            <svg id="svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 640 480"></svg>
+        </div>
+    </div>
+
+    <button id="snap">Snap Photo</button>
+
+    <button id="clear">Clear</button>
 
     <script src="//wrap.co/widgets.js"></script>
     <script src="js/pixel.js"></script>
@@ -14,120 +46,92 @@
     <script src="js/canny.js"></script>
     <script src="js/helpers.js"></script>
     <script src="js/filters.js"></script>
-    <script src="js/jquery-1.10.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
     <script src="js/contour.js"></script>
     <script src="js/image-provider.js"></script>
 
     <script type="text/javascript">
         var gameID, turnID;
-        var image;
-        var contourFinder;
-        var startTime = 0;
-        var maxResolution = 400;
 
-        var resultWidth;
-        var resultHeight;
-
-        var imageWidth;
-
-        var filters,
+        var contourFinder,
+            filters,
             canny;
 
-        image = document.getElementById('canvas');
+        var IMAGE_WIDTH = 640,
+            IMAGE_HEIGHT = 480;
+
+        var video = document.getElementById('video'),
+            cameraCanvas = document.getElementById('cameraCanvas'),
+            svg = document.getElementById('svg'),
+            photoButton = document.getElementById('snap')
+            clearButton = document.getElementById('clear');
+
 
         $(function() {
-            wrap.initialize().then(function() {
-                wrap.getWrapValues()
-                    .then(function(fields) {
-                        gameID = fields.metadata.gameID;
-                        turnID = fields.metadata.turnID;
-                    }).catch(function(error) {
-                        console.log(error)
-                })
-            })
+            wrap.initialize().then(processWrapValues());
 
-            // Hookup photo button
-            document.getElementById("snap").addEventListener("click", function() {
-                canvas.getContext("2d").drawImage(video, 0, 0, 640, 480);
-                //
-                var resultImage = new Image();
-                resultImage.onload = function() {
-                    processDelilah(resultImage)
-                }
-                resultImage.id = 'result';
-                resultImage.src = canvas.toDataURL();
+            startVideo(video);
+
+            photoButton.addEventListener('click', function() {
+                setCameraCanvasImage();
+                convertPhotoToLineArt();
+            });
+
+            clearButton.addEventListener('click', function() {
+                $('#cameraCanvas').hide();
+                $('#lineArt').hide();
             });
         });
 
-        function processDelilah(image) {
-            imageWidth = image.width;
-            if (image.width > image.height) {
-                resultWidth = Math.min(image.width, maxResolution);
-                resultHeight = parseInt(resultWidth * image.height / image.width, 10);
-            } else {
-                resultHeight = Math.min(image.height, maxResolution);
-                resultWidth = parseInt(resultHeight * image.width / image.height, 10);
-            }
-            contourFinder = new ContourFinder();
-            canvas = new Canvas('canvas', resultWidth, resultHeight);
-            canny = new Canny(canvas);
-            filters = new Filters(canvas);
-
-            image.style.opacity = 0;
-
-            // delete previous images
-            var prev = document.querySelector('.container img');
-            if (prev) {
-                prev.parentNode.removeChild(prev);
-            }
-
-            var polylines = document.querySelectorAll('#svg2 polyline');
-            if (polylines.length) {
-                for (var i = 0; i < polylines.length; i++) {
-                    polylines[i].parentNode.removeChild(polylines[i]);
-                }
-            }
-
-            document.querySelector('.container')
-                .appendChild(image);
-
-            canvas.loadImg(image.src, 0, 0, resultWidth, resultHeight).then(process);
+        function processWrapValues() {
+            wrap.getWrapValues()
+                .then(function(fields) {
+                    gameID = fields.metadata.gameID;
+                    turnID = fields.metadata.turnID;
+                })
+                .catch(function(error) { console.log(error); });
         }
 
-        // Put event listeners into place
-        window.addEventListener("DOMContentLoaded", function() {
-            // Grab elements, create settings, etc.
-            var canvas = document.getElementById("canvas"),
-                context = canvas.getContext("2d"),
-                video = document.getElementById("video"),
-                videoObj = { "video": true },
-                errBack = function(error) {
-                        console.log("Video capture error: ", error.code);
-                };
+        function startVideo(video) {
+            var videoObj = { video: true },
+                errorHandler = function(error) { console.log("Video capture error: ", error); };
 
             // Put video listeners into place
             if(navigator.getUserMedia) { // Standard
                 navigator.getUserMedia(videoObj, function(stream) {
                     video.src = stream;
                     video.play();
-                }, errBack);
+                }, errorHandler);
             } else if(navigator.webkitGetUserMedia) { // WebKit-prefixed
                 navigator.webkitGetUserMedia(videoObj, function(stream){
                     video.src = window.webkitURL.createObjectURL(stream);
                     video.play();
-                }, errBack);
+                }, errorHandler);
             }
             else if(navigator.mozGetUserMedia) { // Firefox-prefixed
                 navigator.mozGetUserMedia(videoObj, function(stream){
                     video.src = window.URL.createObjectURL(stream);
                     video.play();
-                }, errBack);
+                }, errorHandler);
             }
-        }, false);
+        }
 
-        function process() {
-            startTime = Date.now();
+        function setCameraCanvasImage() {
+            cameraCanvas.getContext('2d').drawImage(video, 0, 0, IMAGE_WIDTH, IMAGE_HEIGHT);
+            $('#cameraCanvas').show();
+        }
 
+        function convertPhotoToLineArt() {
+            processCanvas = new Canvas('cameraCanvas', IMAGE_WIDTH, IMAGE_HEIGHT);
+            canny = new Canny(processCanvas);
+            filters = new Filters(processCanvas);
+            contourFinder = new ContourFinder();
+
+            processCanvas.loadImg(cameraCanvas.toDataURL(), 0, 0, IMAGE_WIDTH, IMAGE_HEIGHT)
+                .then(function() { process(processCanvas); });
+        }
+
+        function process(canvas) {
             canvas.setImgData(filters.grayscale());
             canvas.setImgData(filters.gaussianBlur(5, 1));
 
@@ -138,24 +142,27 @@
             contourFinder.init(canvas.getCanvas());
             contourFinder.findContours();
 
-            console.log('contourFinder.allContours.length): ' + contourFinder.allContours.length);
-            var secs = (Date.now() - startTime) / 1000;
-            console.log('Finding contours took ' + secs + 's');
-
-            drawContours();
+            drawSvg();
         }
 
-        function drawContours() {
-            for (var i = 0; i < contourFinder.allContours.length; i++) {
-                //console.log('contour #' + i + ' length: ' + contourFinder.allContours[i].length);
-                drawContour(i);
-            }
-            animate();
+        function drawSvg() {
+            resetSvg();
+            contourFinder.allContours.forEach(drawContour);
+            $('#lineArt').show();
         }
 
-        function drawContour(index) {
-            var points = contourFinder.allContours[index];
+        function resetSvg() {
+            var rect = document.createElementNS('http://www.w3.org/2000/svg','rect');
 
+            $('#svg').empty();
+
+            svg.appendChild(rect);
+            rect.setAttributeNS(null, 'fill', '#ffffff');
+            rect.setAttributeNS(null, 'width', '100%');
+            rect.setAttributeNS(null, 'height', '100%');
+        }
+
+        function drawContour(points) {
             var pointsString = '';
             for (var i = 0; i < points.length; i+= 2) {
                 pointsString += (points[i].x + 1) + ',' + points[i].y + '  ';
@@ -163,17 +170,16 @@
 
             var polyline = document.createElementNS('http://www.w3.org/2000/svg','polyline');
             polyline.setAttributeNS(null, 'points', pointsString.trim());
-            polyline.setAttributeNS(null, 'stroke', '#ffffff');
+            polyline.setAttributeNS(null, 'stroke', '#000000');
             polyline.setAttributeNS(null, 'stroke-width', 1);
             polyline.setAttributeNS(null, 'stroke-linecap', 'round');
             polyline.setAttributeNS(null, 'opacity', 1);
             polyline.setAttributeNS(null, 'stroke-dashoffset', 0);
             polyline.setAttributeNS(null, 'fill', 'none');
 
-            var svg = document.querySelector('#svg2');
             svg.appendChild(polyline);
-            svg.setAttribute('viewBox', '0 0 ' + resultWidth + ' ' + resultHeight);
-            svg.setAttribute('style', 'width:' + imageWidth + 'px');
+            svg.setAttribute('viewBox', '0 0 ' + IMAGE_WIDTH + ' ' + IMAGE_HEIGHT);
+            svg.setAttribute('style', 'width:' + IMAGE_WIDTH + 'px');
         }
     </script>
 
