--- a/client/game-turn/game_index.html
+++ b/client/game-turn/game_index.html
@@ -24,6 +24,8 @@
         button {
             display: block;
             margin: 20px auto;
+            height: 100px;
+            width: 100px;
         }
     </style>
 </head>
