--- a/client/start-game/start_index.html
+++ b/client/start-game/start_index.html
@@ -1,37 +1,91 @@
 <html>
 <head>
     <title>Exquisite Wrap: Start Game</title>
+    <!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+
+<!-- Optional theme -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script> 
+      <link href='https://fonts.googleapis.com/css?family=Josefin+Sans' rel='stylesheet' type='text/css'>
     <style>
+        label {
+          font-size: 200%;
+          font-family: 'Josefin Sans', sans-serif;
+        }
+
+        input {
+          font-size: 200%;
+          margin-bottom: 1em;
+          margin-left: .2em;
+        }
+
+        button {
+          font-size: 200%;
+          font-family: 'Josefin Sans', sans-serif;
+          margin-left: 180px;
+          padding: .5em 1.6em .5em 1.6em;
+          background-color: #3698BF;
+          border: none;
+          color: white;
+        }
         #startGameSuccess,
         #startGameError {
             display: none;
         }
+        form {
+            margin-left: 10px;
+        }
     </style>
 </head>
 <body>
-    <form id="startGameForm">
-        <div>
-            <label for="player1">Player 1 Phone:</label>
-            <input type="tel" id="player1" name="player1" />
+    <form class="form-horizontal" id="startGameForm">
+        <div class="form-group">
+            <label for="player1" class="col-sm-2">Player 1 Phone:</label>
+             <div class="col-sm-10">
+                <input type="tel" id="player1" name="player1" />
+            </div>
         </div>
-        <div>
-            <label for="player2">Player 2 Phone:</label>
-            <input type="tel" id="player2" name="player2" />
+        <div class="form-group">
+            <label for="player2" class="col-sm-2">Player 2 Phone:</label>
+             <div class="col-sm-10">
+                <input type="tel" id="player2" name="player2" />
+            </div>
         </div>
-        <div>
-            <label for="player3">Player 3 Phone:</label>
-            <input type="tel" id="player3" name="player3" />
+        <div class="form-group">
+            <label for="player3" class="col-sm-2">Player 3 Phone:</label>
+             <div class="col-sm-10">
+                <input type="tel" id="player3" name="player3" />
+            </div>
         </div>
+        <div class="form-group">
+            <label class="col-sm-2"></label>
+             <div class="col-sm-10">
+                <button type="button" class="btn btn-default" style="margin-left: 175px;">
+                    <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                    Add another player
+                </button>
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="col-sm-2"></label>
+             <div class="col-sm-10">
+                <div class="button">
+                    <button type="submit">Start</button>
+                </div>
+            </div>
+        </div>        
 
-        <div class="button">
-            <button type="submit">Start</button>
-        </div>
+        
+
     </form>
 
     <div id="startGameSuccess">Game started!</div>
     <div id="startGameError">Error starting game!</div>
 
-    <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+
     <script src="//wrap.co/widgets.js"></script>
     <script type="text/javascript">
 
