--- a/client/start-game/start_index.html
+++ b/client/start-game/start_index.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
 <!-- Latest compiled and minified JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script> 
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
       <link href='https://fonts.googleapis.com/css?family=Josefin+Sans' rel='stylesheet' type='text/css'>
     <style>
         label {
@@ -76,9 +76,9 @@
                     <button type="submit">Start</button>
                 </div>
             </div>
-        </div>        
+        </div>
 
-        
+
 
     </form>
 
@@ -90,7 +90,7 @@
     <script type="text/javascript">
 
         $(function() {
-            var DALIBOT_API_URL = 'https://localhost:4444/api';
+            var DALIBOT_API_URL = 'https://10.0.1.238:4444/api';
             var CREATE_GAME_URL = DALIBOT_API_URL + '/games';
 
             var $startGameForm = $('#startGameForm');
