--- a/client/start-game/start_index.html
+++ b/client/start-game/start_index.html
@@ -33,6 +33,7 @@
         }
         #startGameSuccess,
         #startGameError {
+            padding-left: 10px;
             display: none;
         }
         form {
@@ -82,7 +83,10 @@
 
     </form>
 
-    <div id="startGameSuccess">Game started!</div>
+    <div id="startGameSuccess">
+        <h1>The Game Has Started!</h1>
+        <img src="photo.jpg"/>
+    </div>
     <div id="startGameError">Error starting game!</div>
 
 
